--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Week 12</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 
@@ -19,7 +20,7 @@
 
         <h1 id="compare"></h1>
 
-
+        <h2 id="counter"></h2>
 
 
 
