--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     </head>
     <body>
 
+        <h1 class="header">Guess a Number!</h1>
+        <h3 class="instructions">Enter a number 1 to 10. You can press Enter/Return or click on the button</h3>
 
-        <p onclick="run();" id="paragraph">Click Here!</p>
 
         <h1 id="random"></h1>
-
-        <input placeholder="Enter a Number" id="getNumber">
+        <div class="inputNumberBox">
+            <input placeholder="Enter a Number" id="getNumber">
+            <p onclick="run();" id="paragraph">Click Here!</p>
+        </div>
 
         <h1 id="userNumber"></h1>
 
